--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -105,14 +105,29 @@ main {
 
 
 .loader {
-  display: none;
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #007bff;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
+  margin: 20px auto;
 }
 
-.loader.active {
-  display: flex;
+.hidden {
+  display: none;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 
